--- a/HRMS/Views/EmployeeOnRequest/OnboardRequest.cshtml
+++ b/HRMS/Views/EmployeeOnRequest/OnboardRequest.cshtml
@@ -1,5 +1,4 @@
-﻿@model HRMS.Models.RequestModel
-
+﻿
 @{
     ViewData["Title"] = "OnboardRequest";
 }
@@ -16,7 +15,7 @@
     </nav>
     <br />
     <div>
-        <form method="post" data-ajax="true" data-ajax-complete="CompleteRequest" asp-action="OnboardRequest">
+        <form method="post" data-ajax="true" asp-action="OnboardRequest">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <div class="row">
@@ -26,9 +25,8 @@
                         <span asp-validation-for="Firstname" id="errfname" class="text-danger"></span>
                     </div>
                     <div class="col-6">
-                        <label asp-for="BUnitID" class="control-label"></label>
-                        <select asp-for="BUnitID" id="bunit"
-                                class="form-control"
+                        <label asp-for="Businessunit" class="control-label"></label>
+                        <select asp-for="BUnitID" id="bunit" class="form-control"
                                 asp-items="@(new SelectList(ViewBag.Listofbunit, "BUnitID", "Businessunit"))">
                         </select>
                         <span asp-validation-for="BUnitID" class="text-danger"></span>
@@ -42,7 +40,7 @@
                         <span asp-validation-for="Lastname" id="errlname" class="text-danger"></span>
                     </div>
                     <div class="col-6">
-                        <label asp-for="DeptID" class="control-label"></label>
+                        <label asp-for="Department" class="control-label"></label>
                         <select asp-for="DeptID" id="DeptID" name="DeptID" class="form-control"
                                 asp-items="@(new SelectList(ViewBag.Listofdept, "DeptID", "Department"))">
                         </select>
@@ -57,7 +55,7 @@
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="col-6">
-                        <label asp-for="SDeptID" class="control-label"></label>
+                        <label asp-for="SubDepartment" class="control-label"></label>
                         <select asp-for="SDeptID" id="SDeptID" name="SDeptID" class="form-control"
                                 asp-items="@(new SelectList(string.Empty, "SDeptID", "SubDepartment"))">
                         </select>
@@ -81,12 +79,11 @@
                 <div class="row">
                     <div class="col-6">
                         <label asp-for="Doj" class="control-label"></label>
-                        <input type="text" id="Doj" name="Doj" class="datepicker form-control" />
-
+                        <input type="date" id="Doj" name="Doj" asp-format="{0:dd/MM/yyyy}" class="form-control" />
                         <span asp-validation-for="Doj" class="text-danger"></span>
                     </div>
                     <div class="col-6">
-                        <label asp-for="RMID" class="control-label"></label>
+                        <label asp-for="ReportingManager" class="control-label"></label>
                         <select asp-for="RMID" id="rm" class="form-control"
                                 asp-items="@(new SelectList(ViewBag.Listofrm, "RMID", "ReportingManager"))">
                         </select>
@@ -98,18 +95,20 @@
                     <div class="col-8">
                     </div>
                     <div class="col-4">
-                        <button type="submit" id="btn1" class="form-control" value="submit" onclick="btn_continue"> Continue </button>
+                        <button type="submit" id="btn1" class="form-control" value="submit"> Continue </button>
                     </div>
                 </div>
             </div>
-            @ViewBag.message
         </form>
     </div>
 </div>
 
 @section Scripts {
+     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
 
     <script type="text/javascript">
+
         $(document).ready(function () {
             var sdept = "<option value='0'>Select Sub-Department</option>";
             $('#SDeptID').html(sdept);
@@ -130,21 +129,48 @@
             });
         });
 
-        $(function () {
-            $('.datepicker').datepicker();
+        //$(function () {
+        //    $('.datepicker').datepicker();
+        //});
+
+        jQuery(document).ready(function () {  
+            jQuery("body").on("click", "#btn1", function () {
+            var requestModel = {};
+           
+            RequestModel.Firstname   = jQuery('#fname').val();  
+            RequestModel.Lastname = jQuery('#lname').val();
+            RequestModel.Email   = jQuery('#email').val();  
+            RequestModel.Mobile = jQuery('#mobile').val();
+            RequestModel.Doj   = jQuery('#Doj').val();  
+            RequestModel.BUnitID = jQuery('#bunit').val();
+            RequestModel.DeptID   = jQuery('#DeptID').val();  
+            RequestModel.SDeptID = jQuery('#SDeptID').val();
+            RequestModel.Designation = jQuery('#designstion').val();
+            RequestModel.RMID = jQuery('#rm').val();
+
+            jQuery.ajax({  
+                url: 'EmployeeOnRequest/OnboardRequest',  
+                method: 'post',  
+                data:   JSON.stringify(requestModel),  
+                contentType: "application/json; charset=utf-8",  
+                dataType: "json",  
+                success: function () {    
+                    console.log(data);  
+                },  
+            });
+
+        })
         });
 
-        //Validation for Mobile, textbox.
+        //****************Validation for Mobile, textbox.*******************
         $(function () {
             $("#mobile").keypress(function (e) {
                 var keyCode = e.keyCode || e.which;
  
                 $("#errmobile").html("");
- 
-                //Regex for Valid Characters i.e. Numbers.
+
                 var regex = /^[0-9]+$/;
- 
-                //Validate TextBox value against the Regex.
+
                 var isValid = regex.test(String.fromCharCode(keyCode));
                 if (!isValid) {
                     $("#errmobile").html("Only Numbers allowed.");
@@ -157,11 +183,9 @@
                 var keyCode = e.keyCode || e.which;
  
                 $("#errfname").html("");
- 
-                //Regex for Valid Characters i.e. Alphabets.
+
                 var regex = /^[A-Za-z]+$/;
- 
-                //Validate TextBox value against the Regex.
+
                 var isValid = regex.test(String.fromCharCode(keyCode));
                 if (!isValid) {
                     $("#errfname").html("Only Letters allowed.");
@@ -174,11 +198,9 @@
                 var keyCode = e.keyCode || e.which;
  
                 $("#errlname").html("");
- 
-                //Regex for Valid Characters i.e. Alphabets.
+
                 var regex = /^[A-Za-z]+$/;
- 
-                //Validate TextBox value against the Regex.
+
                 var isValid = regex.test(String.fromCharCode(keyCode));
                 if (!isValid) {
                     $("#errlname").html("Only Letters allowed.");
@@ -191,11 +213,9 @@
                 var keyCode = e.keyCode || e.which;
  
                 $("#errdesignation").html("");
- 
-                //Regex for Valid Characters i.e. Alphabets.
+
                 var regex = /^[A-Za-z0-9]+$/;
- 
-                //Validate TextBox value against the Regex.
+
                 var isValid = regex.test(String.fromCharCode(keyCode));
                 if (!isValid) {
                     $("#errdesignation").html("Only Letters and Numbers allowed.");
@@ -206,5 +226,4 @@
         });
     </script>
 
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
