--- a/HRMS/Views/Shared/_Layout.cshtml
+++ b/HRMS/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/lib/jquery-ui-1.13.1.custom/jquery-ui-1.13.1.custom/jquery-ui.min.css" rel="stylesheet" />
     <script src="/lib/jquery/dist/jquery.js"></script>
+    <script src="~/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.js"></script>
 </head>
 <body>
     @*<header>
@@ -61,6 +62,7 @@
     </environment>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery-ui-1.13.1.custom/jquery-ui-1.13.1.custom/jquery-ui.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
