--- a/HRMS/Views/EmployeeOnRequest/AssignOnBoardReq.cshtml
+++ b/HRMS/Views/EmployeeOnRequest/AssignOnBoardReq.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<HRMS.Models.RequestModel>
+﻿
 @{
-    ViewData["Title"] = "AssignOnBoardReq";
+    ViewData["Title"] = "Assign OnBoarding Request";
 }
 
 <div class="container">
@@ -76,7 +76,7 @@
                 </select>
             </div>
             <div class="align-self-center m-2">
-                <a href="#">+ Add New Task</a>
+                <a href="#">+ New Task</a>
             </div>
             <div class="align-self-center m-1">
                 <span class="badge rounded-pill bg-secondary" style="height: 22px; width: 22px; line-height: 2;">0</span>
@@ -94,40 +94,40 @@
     </div>
 
     @*<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Author)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Author)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.BookID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.BookID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.BookID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>*@
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Title)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Author)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Price)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model) {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Author)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Price)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.BookID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.BookID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.BookID">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>*@
 </div>
 
