--- a/HRMS/Views/EmployeeOnRequest/AssignOnBoardReq.cshtml
+++ b/HRMS/Views/EmployeeOnRequest/AssignOnBoardReq.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Assign OnBoarding Request";
 }
 
-<div class="container">
-    <nav class="navbar navbar-light">
+<div class="container mt-4">
+    <nav class="navbar navbar-light"  style="border: 1px solid black;">
         <div>
             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#fff" cursor="pointer" class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
@@ -78,17 +78,17 @@
             <div class="align-self-center m-2">
                 <a href="#">+ New Task</a>
             </div>
-            <div class="align-self-center m-1">
+            <div class="align-self-center m-1 p-1">
                 <span class="badge rounded-pill bg-secondary" style="height: 22px; width: 22px; line-height: 2;">0</span>
             </div>
-            <div class="align-self-center m-1">
-                <span class="badge rounded-pill bg-danger"  style="height: 22px; width: 22px; line-height: 2;">0</span>
+            <div class="align-self-center m-1 p-1">
+                <span class="badge rounded-pill bg-danger" style="height: 22px; width: 22px; line-height: 2;">0</span>
             </div>
-            <div class="align-self-center m-1">
-                <span class="badge rounded-pill bg-warning text-dark"  style="height: 22px; width: 22px; line-height: 2;">0</span>
+            <div class="align-self-center m-1 p-1">
+                <span class="badge rounded-pill bg-warning text-dark" style="height: 22px; width: 22px; line-height: 2;">0</span>
             </div>
-            <div class="align-self-center m-1">
-                <span class="badge rounded-pill bg-success"  style="height: 22px; width: 22px; line-height: 2;">0</span>
+            <div class="align-self-center m-1 p-1">
+                <span class="badge rounded-pill bg-success" style="height: 22px; width: 22px; line-height: 2;">0</span>
             </div>
         </div>
     </div>
