--- a/HRMS/Views/EmployeeOnRequest/AssignOnBoardReq.cshtml
+++ b/HRMS/Views/EmployeeOnRequest/AssignOnBoardReq.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model HRMS.Models.AssignTaskModel
 @{
     ViewData["Title"] = "Assign OnBoarding Request";
 }
@@ -14,7 +14,7 @@
         <span class="navbar-brand mb-0 m-auto h1">Onboarding Request (Onboarded By: )</span>
     </nav>
     <div class="container-fluid" style="border: 1px solid black;">
-        <div class="row" style="height: 50px; font-size: 12px; text-transform: uppercase;">
+        <div class="row" style="height: 50px; font-size: 14px; text-transform: uppercase;">
             <div class="col-2 align-self-center">
                 <b>Doj:</b>
             </div>
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="container-fluid" style="border: 1px solid black;">
-        <div class="row" style="height: 50px; font-size: 12px; text-transform: uppercase;">
+        <div class="row" style="height: 50px; font-size: 14px; text-transform: uppercase;">
             <div class="col-3 align-self-center">
                 <b>Name:</b>
             </div>
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="container-fluid" style="border: 1px solid black;">
-        <div class="row" style="height: 40px; font-size: 12px;">
+        <div class="row" style="height: 40px; font-size: 14px;">
             <div class="align-self-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-funnel mb-0 m-1" viewBox="0 0 16 16">
                   <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2h-11z"/>
@@ -76,7 +76,7 @@
                 </select>
             </div>
             <div class="align-self-center m-2">
-                <a href="#">+ New Task</a>
+                <a onclick="addtaskmodel('@Url.Action("AddNewTask","EmployeeOnRequest",null,Context.Request.Scheme)','Add New Task')" style="color: blue; cursor: pointer;">+ New Task</a>
             </div>
             <div class="align-self-center m-1 p-1">
                 <span class="badge rounded-pill bg-secondary" style="height: 22px; width: 22px; line-height: 2;">0</span>
@@ -92,42 +92,44 @@
             </div>
         </div>
     </div>
-
-    @*<table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Title)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Author)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Price)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model) {
+    <div class="container-fluid" style="border: 1px solid black;">
+        <table class="table">
+            <thead>
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Author)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Price)
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.BookID">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.BookID">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.BookID">Delete</a>
-                    </td>
+                    <th class="col-4">
+                        @Html.DisplayNameFor(model => model.TaskName)
+                    </th>
+                    <th class="col-2">
+                        @Html.DisplayNameFor(model => model.AssigneeName)
+                    </th>
+                    <th class="col-2">
+                        <a> Actions </a>
+                    </th>
                 </tr>
-            }
-        </tbody>
-    </table>*@
+            </thead>
+            <tbody>
+                @*@foreach (var item in Model) {
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.TaskName)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.AssigneeName)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.DueDate)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.PlannerStatus)
+                        </th>
+                        <td>
+                            <a asp-action="EditAssignTask" asp-route-id="@item.BookID"><i class="bi bi-pencil"></i></a>
+                            <a asp-action="Delete" asp-route-id="@item.BookID">Delete</a>
+                        </td>
+                    </tr>
+                }*@
+            </tbody>
+        </table>
+    </div>
 </div>
 
