--- a/HRMS/Views/Shared/_Layout.cshtml
+++ b/HRMS/Views/Shared/_Layout.cshtml
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ExigoTech</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+    @*<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" rel="stylesheet" />*@
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet" />
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/lib/jquery-ui-1.13.1.custom/jquery-ui-1.13.1.custom/jquery-ui.min.css" rel="stylesheet" />
-
+    
 </head>
 <body>
-    @*<header>
+    <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
                 <div class="container">
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">HRMS</a>
@@ -33,11 +36,25 @@
                     </div>
                 </div>
             </nav>
-        </header>*@
+        </header>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+    </div>
+
+    <div class="modal" tabindex="-1" id="addnewtaskmodel">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
+            <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close"> <a asp-action="AssignOnBoardReq"><i class="bi bi-x-lg" style="height: 22px; width: 22px;"></i></a></button>
+          </div>
+          <div class="modal-body">
+        
+          </div>
+        </div>
+      </div>
     </div>
 
     <footer class="border-top footer text-muted">
