--- a/HRMS/Views/_ViewImports.cshtml
+++ b/HRMS/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using HRMS
 @using HRMS.Models
+@using HRMS_Portal.Models
 @model HRMS.Models.RequestModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
