--- a/HRMS/Views/Emp/Delete.cshtml
+++ b/HRMS/Views/Emp/Delete.cshtml
@@ -1,41 +1,36 @@
-﻿@model HRMS.Models.AssignTaskModel
+﻿@model HRMS.Models.AssignOnBoardReq
 
 @{
-    ViewData["Title"] = "DeleteAssignTask";
-    Layout = "~/Views/EmployeeOnRequest/OnboardRequest.cshtml";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>DeleteAssignTask</h1>
+<h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>AssignTaskModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EmpID)
+            @Html.DisplayNameFor(model => model.TaskName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EmpID)
+            @Html.DisplayFor(model => model.TaskName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TaskID)
+            @Html.DisplayNameFor(model => model.AssigneeName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TaskID)
+            @Html.DisplayFor(model => model.AssigneeName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AssigneeID)
+            @Html.DisplayNameFor(model => model.DueDate)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AssigneeID)
-        </dd>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DueDate)
         </dd>
     </dl>
     
-    <form asp-action="DeleteAssignTask">
+    <form asp-action="Delete">
         <input type="hidden" asp-for="AssignTaskID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
