--- a/HRMS/Views/Emp/OnboardRequest.cshtml
+++ b/HRMS/Views/Emp/OnboardRequest.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model HRMS.Models.RequestModel
+
 @{
     ViewData["Title"] = "Create Onboarding Request";
 }
@@ -28,7 +29,7 @@
                         <select asp-for="BUnitID" id="bunit" class="form-control"
                                 asp-items="@(new SelectList(ViewBag.Listofbunit, "BUnitID", "Businessunit"))">
                         </select>
-                        <span asp-validation-for="BUnitID" class="text-danger"></span>
+                        <span asp-validation-for="Businessunit" class="text-danger"></span>
                     </div>
                 </div>
                 <br />
@@ -43,7 +44,7 @@
                         <select asp-for="DeptID" id="DeptID" name="DeptID" class="form-control"
                                 asp-items="@(new SelectList(ViewBag.Listofdept, "DeptID", "Department"))">
                         </select>
-                        <span asp-validation-for="DeptID" class="text-danger"></span>
+                        <span asp-validation-for="Department" class="text-danger"></span>
                     </div>
                 </div>
                 <br />
@@ -58,7 +59,7 @@
                         <select asp-for="SDeptID" id="SDeptID" name="SDeptID" class="form-control"
                                 asp-items="@(new SelectList(string.Empty, "SDeptID", "SubDepartment"))">
                         </select>
-                        <span asp-validation-for="SDeptID" class="text-danger"></span>
+                        <span asp-validation-for="SubDepartment" class="text-danger"></span>
                     </div>
                 </div>
                 <br />
@@ -78,7 +79,7 @@
                 <div class="row">
                     <div class="col-6">
                         <label asp-for="Doj" class="control-label"></label>
-                        <input type="date" id="Doj" name="Doj" asp-format="{0:dd/MM/yyyy}" class="form-control" />
+                        <input type="date" asp-for="Doj" id="Doj" name="Doj" asp-format="{0:dd/MM/yyyy}" class="form-control" />
                         <span asp-validation-for="Doj" class="text-danger"></span>
                     </div>
                     <div class="col-6">
@@ -86,7 +87,7 @@
                         <select asp-for="RMID" id="rm" class="form-control"
                                 asp-items="@(new SelectList(ViewBag.Listofrm, "RMID", "ReportingManager"))">
                         </select>
-                        <span asp-validation-for="RMID" class="text-danger"></span>
+                        <span asp-validation-for="ReportingManager" class="text-danger"></span>
                     </div>
                 </div>
                 <br />
@@ -116,7 +117,7 @@
         $(document).ready(function () {
             
             $('#DeptID').change(function () {
-                var url = '@Url.Content("~/")' + "EmployeeOnRequest/GETSubDept";
+                var url = '@Url.Content("~/")' + "Emp/GETSubDept";
                 var ddlsource = "#DeptID";
                 $.getJSON(url, { SDeptID: $(ddlsource).val() }, function (data) {
                     var sdept = '';
