--- a/HRMS/Views/Emp/Create.cshtml
+++ b/HRMS/Views/Emp/Create.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DueDate" class="control-label"></label>
-                <input asp-for="DueDate" class="form-control" />
+                <input type="date" asp-for="DueDate" asp-format="{0:dd/MM/yyyy}" class="form-control" />
                 <span asp-validation-for="DueDate" class="text-danger"></span>
             </div>
             <div class="form-group">
