--- a/HRMS/Views/Shared/_Layout.cshtml
+++ b/HRMS/Views/Shared/_Layout.cshtml
@@ -6,8 +6,7 @@
     <title>@ViewData["Title"] - ExigoTech</title>
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet" />
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"rel="stylesheet" />
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
@@ -59,24 +58,10 @@
     </div>
 
     @* Loader *@
-    @*<div class="mosaic-loader" id="mosaic-loader">
-      <div class="cell d-0"></div>
-      <div class="cell d-1"></div>
-      <div class="cell d-2"></div>
-      <div class="cell d-3"></div>
-      <div class="cell d-1"></div>
-      <div class="cell d-2"></div>
-      <div class="cell d-3"></div>
-      <div class="cell d-4"></div>
-      <div class="cell d-2"></div>
-      <div class="cell d-3"></div>
-      <div class="cell d-4"></div>
-      <div class="cell d-5"></div>
-      <div class="cell d-3"></div>
-      <div class="cell d-4"></div>
-      <div class="cell d-5"></div>
-      <div class="cell d-6"></div>
+    @*<div class="loaderbody" id="loaderbody">
+        <div class="loader"></div>
     </div>*@
+   
 
     <footer class="border-top footer text-muted">
         <div class="container">
