--- a/HRMS/wwwroot/css/site.css
+++ b/HRMS/wwwroot/css/site.css
@@ -66,130 +66,96 @@ body {
 }
 
 /* Loader */
-/*$--p-1: #d4aee0;
-$--p-2: #8975b4;
-$--p-3: #64518a;
-$--p-4: #565190;
-
-$--b-1: #44abac;
-$--b-2: #2ca7d8;
-$--b-3: #1482ce;
-$--b-4: #05597c;
-
-$--g-1: #b2dd57;
-$--g-2: #57c443;
-$--g-3: #05b853;
-$--g-4: #19962e;
-
-$--y-1: #fdc82e;
-$--y-2: #fd9c2e;
-$--y-3: #d5385a;
-$--y-4: #911750;
-
-$--s-1: #d9d9d9;
-$--s-2: #9e9e9e;
-$--s-3: #666666;
-$--s-4: #2b2b2b;
-
-$colors: (
-  $--p-1,
-  $--p-2,
-  $--p-3,
-  $--p-4,
-  $--b-1,
-  $--b-2,
-  $--b-3,
-  $--b-4,
-  $--g-1,
-  $--g-2,
-  $--g-3,
-  $--g-4,
-  $--y-1,
-  $--y-2,
-  $--y-3,
-  $--y-4,
-);
-
-h2 {
-    display: block;
-    color: white;
-    font-weight: 100;
-    //margin-right: 2rem;
-    text-align: center;
+/*.loaderbody {
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    position: absolute;
+    background-color: rgba(128,128,128,0.2);
+    z-index: 2147483647;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap');
-
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    margin: 0;
-    font-family: 'Lato';
-    font-weight: 300;
-    font-size: 24px;
-    background: $--s-4;
+.loader{
+    border: 7px solid #F3F3F3;
+    border-top: 7px solid #3498DB;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    position: fixed;
+    top: 50%;
+    left: 50%;
 }
 
-.mosaic-loader {
-    --cell-size: 64px;
-    --cell-spacing: 1px;
-    --border-width: 1px;
-    --cells: 4;
-    --total-size: calc(var(--cells) * (var(--cell-size) + 2 * var(--cell-spacing)));
-    display: flex;
-    flex-wrap: wrap;
-    width: var(--total-size);
-    height: var(--total-size);
-    > .cell
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}*/
 
-{
-    --cell-color: white;
-    flex: 0 0 var(--cell-size);
-    margin: var(--cell-spacing);
-    background-color: transparent;
-    box-sizing: border-box;
-    border: var(--border-width) solid var(--cell-color);
-    animation: 1.5s ripple ease infinite;
-    $delays: (2 * 4) - 2;
-
-    @for $i from 1 through $delays {
-        &.d-# {
-            $i
-        }
-
-{
-    animation-delay: $i * 100ms;
+/*.loader,
+.loader:before,
+.loader:after {
+    border-radius: 50%;
+    width: 2.5em;
+    height: 2.5em;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation: load7 1.8s infinite ease-in-out;
+    animation: load7 1.8s infinite ease-in-out;
 }
 
+.loader {
+    color: #22509b;
+    font-size: 8px;
+    margin: 300px auto;
+    position: relative;
+    text-indent: -9999em;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
 }
 
-@for $i from 1 through length($colors) {
-    &:nth-child(#{$i}) {
-        --cell-color: #{nth($colors, $i)};
+    .loader:before,
+    .loader:after {
+        content: '';
+        position: absolute;
+        top: 0;
+    }
+
+    .loader:before {
+        left: -3.5em;
+        -webkit-animation-delay: -0.32s;
+        animation-delay: -0.32s;
+    }
+
+    .loader:after {
+        left: 3.5em;
+    }
+
+@-webkit-keyframes load7 {
+    0%, 80%, 100% {
+        box-shadow: 0 2.5em 0 -1.3em;
+    }
+
+    40% {
+        box-shadow: 0 2.5em 0 0;
     }
 }
 
-}
-}
-
-@keyframes ripple {
-    0% {
-        background-color: transparent;
+@keyframes load7 {
+    0%, 80%, 100% {
+        box-shadow: 0 2.5em 0 -1.3em;
     }
 
-    30% {
-        background-color: var(--cell-color);
-    }
-
-    60% {
-        background-color: transparent;
-    }
-
-    100% {
-        background-color: transparent;
+    40% {
+        box-shadow: 0 2.5em 0 0;
     }
 }*/
 
